--- a/src/Lephone.Processor/App.config
+++ b/src/Lephone.Processor/App.config
@@ -8,4 +8,6 @@
     <add key="NameMapper" value="Lephone.Core.Text.UnderlineNameMapper, Lephone.Core" />
     <add key="DataBase" value="@Access : @~test.mdb" />
   </Lephone.Settings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+<runtime><legacyCorruptedStateExceptionsPolicy enabled="true" /></runtime>
+</configuration>
