--- a/src/Lephone.UnitTest/Lephone.UnitTest.csproj
+++ b/src/Lephone.UnitTest/Lephone.UnitTest.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Data\PagedSelectorTest.cs" />
     <Compile Include="Data\PartialUpdateTest.cs" />
     <Compile Include="Data\PropertyClassTest.cs" />
+    <Compile Include="Data\QueryRequiredTest.cs" />
     <Compile Include="Data\RealLikeModelTest.cs" />
     <Compile Include="Data\SerializeTest.cs" />
     <Compile Include="Data\SmartUpdateTest.cs" />
@@ -173,6 +174,7 @@
     <Compile Include="util\IocTest.cs" />
     <Compile Include="util\LoggerTest.cs" />
     <Compile Include="util\NameMapperTest.cs" />
+    <Compile Include="util\ServiceBaseTest.cs" />
     <Compile Include="util\TestBOMChecker.cs" />
     <Compile Include="util\timingTask\DayTimingTest.cs" />
     <Compile Include="util\MockMiscProvider.cs" />
