--- a/src/Leafing.MSBuild/Leafing.MSBuild.csproj
+++ b/src/Leafing.MSBuild/Leafing.MSBuild.csproj
@@ -42,11 +42,13 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Management" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Leafing.Core\UtilVersion.cs">
+      <Link>UtilVersion.cs</Link>
+    </Compile>
     <Compile Include="DbEntryInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
