--- a/src/Leafing.Processor/App.config
+++ b/src/Leafing.Processor/App.config
@@ -7,7 +7,7 @@
     <add key="NameMapper" value="Leafing.Core.Text.UnderlineNameMapper, Leafing.Core" />
     <add key="DataBase" value="@Access : @~test.mdb" />
   </Leafing.Settings>
-  <startup>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
   <runtime>
