--- a/src/Leafing.Core/Leafing.Core.csproj
+++ b/src/Leafing.Core/Leafing.Core.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Ioc\InjectedClassCreator.cs" />
     <Compile Include="Ioc\IocException.cs" />
     <Compile Include="Ioc\SimpleClassCreator.cs" />
+    <Compile Include="Logging\CacheTextFileRecorder.cs" />
     <Compile Include="TimingTask\QueueTaskController.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="CountViewer.cs" />
