--- a/src/Leafing.Data/Leafing.Data.csproj
+++ b/src/Leafing.Data/Leafing.Data.csproj
@@ -111,6 +111,7 @@ copy *.dll ..\..\..\..\bin\
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Builder\AlterTableStatementBuilder.cs" />
     <Compile Include="Builder\Clause\ConstCondition.cs" />
     <Compile Include="Builder\Clause\InClause.cs" />
     <Compile Include="Builder\ISqlKeys.cs" />
@@ -151,6 +152,8 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Model\Member\MemberBoolAttributes.cs" />
     <Compile Include="Model\Member\NullableBooleanMemberHandler.cs" />
     <Compile Include="Model\Member\NullableMemberHandler.cs" />
+    <Compile Include="Model\QuerySyntax\AlterContent.cs" />
+    <Compile Include="Model\QuerySyntax\AlterInterfaces.cs" />
     <Compile Include="Model\Saver\DbModelSaver.cs" />
     <Compile Include="Model\Saver\DbObjectSaver.cs" />
     <Compile Include="Model\Saver\RelationModelSaver.cs" />
