--- a/src/Leafing.UnitTest/Leafing.UnitTest.csproj
+++ b/src/Leafing.UnitTest/Leafing.UnitTest.csproj
@@ -89,6 +89,7 @@
   <ItemGroup>
     <Compile Include="DataTestBase.cs" />
     <Compile Include="Data\ActsAsTreeTest.cs" />
+    <Compile Include="Data\AlterTableTest.cs" />
     <Compile Include="Data\AutoCreateTableTest.cs" />
     <Compile Include="Data\BelongsMoreTest.cs" />
     <Compile Include="Data\BulkCopyTest.cs" />
