--- a/src/Soaring/web.config
+++ b/src/Soaring/web.config
@@ -5,12 +5,11 @@
 	</configSections>
 	<Leafing.Settings>
 		<!--Mvc Config-->
-		<add key="ControllerAssembly" value="Soaring.Biz, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0610272acecf53c3"/>
 		<add key="ScaffoldingMasterPage" value="~/main.master"/>
 		<!--Logger Config-->
-		<add key="SystemLogRecorder" value="Leafing.Core.Logging.DtsFileLogRecorder, Leafing.Core"/>
+		<add key="SystemLogRecorder" value="@TextFile"/>
 		<!--Database Config-->
-		<add key="NameMapper" value="Leafing.Core.Text.InflectionNameMapper, Leafing.Core"/>
+		<add key="NameMapper" value="@Inflection"/>
 		<add key="CacheEnabled" value="false"/>
 		<add key="DefaultContext" value="Development"/>
 		<!--Development Database-->
